--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@nut-tree/nut-js": "^4.0.0"
+    "@nut-tree/nut-js": "^4.0.0",
+    "@types/express": "^4.17.21",
+    "express": "^4.19.2"
   }
 }
