--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nut-tree/nut-js": "^4.0.0",
     "@types/express": "^4.17.21",
+    "clipboardy": "^4.0.0",
     "express": "^4.19.2"
   }
 }
