--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@nut-tree/nut-js": "^4.0.0",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "clipboardy": "^4.0.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
