--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
     "clipboardy": "^4.0.0",
+    "eslint": "^9.0.0",
     "express": "^4.19.2",
+    "kolorist": "^1.8.0",
     "multer": "^1.4.5-lts.1"
   }
 }
