--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/copy-paste": "^1.1.33",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
-    "clipboardy": "^4.0.0",
+    "copy-paste": "^2.1.1",
     "eslint": "^9.0.0",
     "express": "^4.19.2",
     "kolorist": "^1.8.0",
